# repodanta

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  repodanta.py  requirements.txt
.repodanta/: repodanta_chunks.pkl
docs/: architecture.md  how-it-works.md
repodanta/: call_tracer.py  chunker.py  cli.py  config.py  dependency_service.py  embedder.py  entity_detector.py  function_search.py  function_service.py  graph_builder.py  graph_service.py  index_service.py  llm_interface.py  models.py  query_engine.py  repo_hash.py  retriever.py  vector_store.py
repodanta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repodanta/commands/: core.py  inspect.py  query.py  trace.py
src/: call_tracer.py  chunker.py  cli.py  config.py  dependency_service.py  duplicate_detector.py  embedder.py  function_search.py  function_service.py  graph_builder.py  graph_service.py  index_service.py  llm_interface.py  models.py  output.py  query_engine.py  retriever.py  security_scan.py  vector_store.py
src/repodanta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_chunker.py  test_cli_startup.py  test_models.py  test_regression.py  test_retriever.py
